style: adjust logo margins and heights to prevent cropping on header edges

--- a/css/header.css
+++ b/css/header.css
@@ -22,11 +22,11 @@
 }
 
 #header-logo-img {
-    height: 240px;
-    margin-top: -90px;
-    margin-bottom: -90px;
-    margin-left: -80px;
-    margin-right: -80px;
+    height: 180px;
+    margin-top: -65px;
+    margin-bottom: -65px;
+    margin-left: -40px;
+    margin-right: -40px;
     object-fit: contain;
     transition: var(--transition-fast);
 }
@@ -178,11 +178,11 @@
     }
 
     #header-logo-img {
-        height: 180px;
-        margin-top: -70px;
-        margin-bottom: -70px;
-        margin-left: -60px;
-        margin-right: -60px;
+        height: 140px;
+        margin-top: -50px;
+        margin-bottom: -50px;
+        margin-left: -30px;
+        margin-right: -30px;
         object-fit: contain;
     }
 
